WIP - user handler swagger documentation
